--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "easy",
-  "version": "0.0.0",
+  "name": "EasyAuction",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "mongoose": "^5.3.15",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0"
   }
 }
