--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "DEBUG=express:* nodemon ./bin/www"
   },
   "dependencies": {
     "connect-flash": "^0.1.1",
